--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,27 +21,38 @@
         android:hint="@string/name_editText"
         android:inputType="textPersonName" />
 
+    <TextView
+        android:id="@+id/contact_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/name_editText"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="50dp"
+        android:ems="10"
+        android:inputType="none"
+        android:text="@string/contact_textView"
+        android:textSize="18sp" />
+
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/email_editText"
         android:layout_alignParentEnd="true"
-        android:layout_alignStart="@+id/addPlayer_button"
         android:layout_alignTop="@+id/phone_editText">
 
         <RadioButton
             android:id="@+id/phone_radioButton"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@string/phone_radioButton" />
+            android:layout_marginTop="5dp"/>
 
         <RadioButton
             android:id="@+id/email_radioButton"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@string/email_radioButton"
             android:textAlignment="textStart" />
 
     </RadioGroup>
@@ -57,14 +68,6 @@
         android:inputType="textEmailAddress"
         android:textAlignment="textStart" />
 
-    <Button
-        android:id="@+id/addPlayer_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:text="@string/addPlayer_button" />
-
     <EditText
         android:id="@+id/phone_editText"
         android:layout_width="wrap_content"
@@ -79,20 +82,6 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/contact_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/name_editText"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="50dp"
-        android:ems="10"
-        android:inputType="none"
-        android:text="@string/contact_textView"
-        android:textSize="18sp" />
-
-    <TextView
         android:id="@+id/output_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -102,6 +91,14 @@
         android:layout_below="@+id/email_editText"
         android:layout_marginTop="20dp"
         android:textAlignment="center" />
+
+    <Button
+        android:id="@+id/addPlayer_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:text="@string/addPlayer_button" />
 
     <Button
         android:id="@+id/showPlayers_button"
