--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,126 +10,40 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.bacon.secretsanta.MainActivity">
 
-    <EditText
-        android:id="@+id/name_editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:hint="@string/name_editText"
-        android:inputType="textPersonName" />
-
-    <TextView
-        android:id="@+id/contact_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/name_editText"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="50dp"
-        android:ems="10"
-        android:inputType="none"
-        android:text="@string/contact_textView"
-        android:textSize="18sp" />
-
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/email_editText"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/phone_editText">
-
-        <RadioButton
-            android:id="@+id/phone_radioButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"/>
-
-        <RadioButton
-            android:id="@+id/email_radioButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:textAlignment="textStart" />
-
-    </RadioGroup>
-
-    <EditText
-        android:id="@+id/email_editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/phone_editText"
-        android:ems="10"
-        android:hint="@string/email_editText"
-        android:inputType="textEmailAddress"
-        android:textAlignment="textStart" />
-
-    <EditText
-        android:id="@+id/phone_editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/contact_textView"
-        android:ems="10"
-        android:hint="@string/phone_editText"
-        android:inputType="phone"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/output_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/showPlayers_button"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/email_editText"
-        android:layout_marginTop="20dp"
-        android:textAlignment="center" />
-
-    <Button
-        android:id="@+id/addPlayer_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:text="@string/addPlayer_button" />
-
-    <Button
-        android:id="@+id/showPlayers_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/addPlayer_button"
-        android:layout_alignParentEnd="true"
-        android:text="@string/showPlayers_button" />
-
-    <Button
-        android:id="@+id/updatePlayer_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/addPlayer_button"
-        android:text="@string/updatePlayer_button" />
-
-    <Button
-        android:id="@+id/delete_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/secretSanta_button"
-        android:text="@string/delete_button" />
 
     <Button
         android:id="@+id/secretSanta_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/secretSanta_button"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/output_textView"
-        android:text="@string/secretSanta_button" />
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Edit Players"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editPlayers_button"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/showPlayers_button"
+        android:layout_alignEnd="@+id/showPlayers_button" />
+
+    <Button
+        android:id="@+id/showPlayers_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/showPlayers_button"
+        android:layout_below="@+id/editPlayers_button"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Add players"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/addPlayers_button"
+        android:layout_above="@+id/editPlayers_button"
+        android:layout_alignStart="@+id/editPlayers_button"
+        android:layout_alignEnd="@+id/editPlayers_button" />
 
 </RelativeLayout>
