--- a/app/src/main/res/layout/activity_add_player.xml
+++ b/app/src/main/res/layout/activity_add_player.xml
@@ -97,10 +97,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="?attr/homeAsUpIndicator"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:id="@+id/main_imageButton"
         android:tint="@android:color/holo_red_dark"
-        android:background="@android:color/background_light" />
+        android:background="@android:color/background_light"
+        android:contentDescription="@string/home_imageButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
