--- a/app/src/main/res/layout/activity_add_player.xml
+++ b/app/src/main/res/layout/activity_add_player.xml
@@ -37,25 +37,28 @@
         android:inputType="phone"
         android:textAlignment="textStart"
         android:textAllCaps="false"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_toStartOf="@+id/radioGroup" />
 
     <EditText
         android:id="@+id/email_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/phone_editText"
         android:ems="10"
         android:hint="@string/email_editText"
         android:inputType="textEmailAddress"
-        android:textAlignment="textStart" />
+        android:textAlignment="textStart"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/radioGroup" />
 
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/email_editText"
         android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/phone_editText">
+        android:layout_alignTop="@+id/phone_editText"
+        android:id="@+id/radioGroup">
 
         <RadioButton
             android:id="@+id/phone_radioButton"
@@ -90,17 +93,6 @@
         android:hint="@string/name_editText"
         android:inputType="textPersonName"
         android:textAlignment="textStart"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="?attr/homeAsUpIndicator"
-        android:id="@+id/main_imageButton"
-        android:tint="@android:color/holo_red_dark"
-        android:background="@android:color/background_light"
-        android:contentDescription="@string/home_imageButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
