--- a/app/src/main/res/layout/activity_view_players.xml
+++ b/app/src/main/res/layout/activity_view_players.xml
@@ -14,22 +14,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/home_imageButton"
         android:layout_alignParentStart="true"
         android:id="@+id/output_textView"
         android:layout_alignParentEnd="true"
-        android:layout_above="@+id/deleteAll_button" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="?attr/homeAsUpIndicator"
-        android:id="@+id/home_imageButton"
-        android:tint="@android:color/holo_red_dark"
-        android:background="@android:color/background_light"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:contentDescription="@string/home_imageButton" />
+        android:layout_above="@+id/deleteAll_button"
+        android:layout_alignParentTop="true" />
 
     <Button
         android:text="@string/deleteAll_button"
